parallax, pics, some text

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-    <script src="assets/javascript/app.js"></script>
 </head>
 
 <body>
-        <!-- <nav>
+    <!-- <nav>
         <div class="nav-wrapper grey darken-4">
             <a href="#" class="brand-logo">Logo</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -22,26 +22,167 @@
             </ul>
         </div>
     </nav> -->
-        <div class="container .my-wrapper valign-wrapper">
-            <div class="row">
+    <div class="parallax-container">
+        <div class="parallax"><img src="assets/images/pexels-photo-1083822.jpeg"></div>
+        <div class="container">
+            <div class="section row">
                 <div class="col s12 m8 offset-m2 ">
-                    <div class="card grey darken-4">
-                        <div class="card-content white-text">
-                            <span class="card-title section center-align">Welcome</span>
-                            <p>I am a very simple card. I am good at containing small bits of information.
-                                I am convenient because I require little markup to use effectively.</p>
+                    <div class="card head grey darken-4">
+                        <div class="card-content grey-text text-lighten-4">
+                            <span class="card-title section center-align">Hello, I'm Stephanie</span>
+                            <p class="center-align">I'm a creative Web Developer with a love for intuitive design.</p>
                         </div>
                         <div class="card-action center-align">
-                            <a class="#694552-text" href="#">Portfolio</a>
-                            <a class="link" href="#">About</a>
-                            <a class="link" href="#">Contact</a>
+                            <a class="link red-text text-lighten-4" href="#portfolio">Portfolio</a>
+                            <a class="link red-text text-lighten-4" href="#about">About</a>
+                            <a class="link red-text text-lighten-4" href="#contact">Contact</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    
+    </div>
+    <div class="section grey darken-4">
+        <div class="row container">
+            <a name="portfolio"></a>
+            <h2 class="header red-text text-lighten-4">Portfolio</h2>
+            <p class="grey-text text-lighten-4 lighten-3">Parallax is an effect where the background content or image
+                in
+                this case, is moved at a different speed than the foreground content while scrolling.</p>
+            <div class="row">
+                <div class="col m4">
+                    <div class="card medium ">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/images/Crys_1.jpg">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+                            <p><a href="#">This is a link</a></p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col m4">
+                    <div class="card medium ">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/images/Crys_1.jpg">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+                            <p><a href="#">This is a link</a></p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col m4">
+                    <div class="card medium ">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/images/Crys_1.jpg">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+                            <p><a href="#">This is a link</a></p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="parallax-container">
+        <div class="parallax"><img src="assets/images/pexels-photo-316465.jpeg"></div>
+    </div>
+    <div class="section grey darken-4">
+        <div class="row container">
+            <div class="row">
+                <div class="col m12">
+                    <a name="about"></a>
+                    <h2 class="header red-text text-lighten-4">About Me</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col m3">
+                    <img class="responsive-img" src="https://via.placeholder.com/250,C/O https://placeholder.com/">
+                </div>
+                <div class="col m8">
+                    <p class="grey-text text-lighten-4 p1">
+                        After working for nearly a decade to help pensioners access their retirement benefits and then
+                        staying home to raise my
+                        son, I have honed a keen eye for efficiency and detail. In addition, I have cultivated the
+                        talent to
+                        earnestly listen, ensuring people feel heard and feel that their needs are met.
+                    </p>
+                    <p class="grey-text text-lighten-4">
+                        I am passionate about creative pursuits, from designing and building photo booths for parties
+                        and
+                        conferences, to sewing custom clothes for clients. Moving into web development is a natural
+                        progression
+                        which marries my talent for detail with my love for making.
+                    </p>
+                    <p class="grey-text text-lighten-4">
+                        Having completed a rigorous full stack development bootcamp with the University of Denver, I
+                        have built numerous web applications from scratch
+                        using languages such as HTML, CSS, and JavaScript. Armed with these skills, I look forward to
+                        building
+                        client connections and turning their thoughts into well-built websites.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="parallax-container">
+        <div class="parallax"><img src="assets/images/pexels-photo-1083822.jpeg"></div>
+    </div>
+    <div class="section grey darken-4">
+        <div class="row container">
+            <a name="contact"></a>
+            <h2 class="header red-text text-lighten-4">Contact</h2>
+            <p class="grey-text text-lighten-4 lighten-3">Parallax is an effect where the background content or image
+                in
+                this case, is moved at a different speed than the foreground content while scrolling.</p>
+            <div class="row">
+                <form class="col s12">
+                    <div class="row">
+                        <div class="input-field col s12 m6">
+                            <input id="name" type="text" class="validate">
+                            <label for="name">Name</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12 m6">
+                            <input id="email" type="email" class="validate">
+                            <label for="email">Email</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12 m6">
+                            <textarea id="textarea1" class="materialize-textarea"></textarea>
+                            <label for="textarea1">Message</label>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="assets/javascript/app.js"></script>
+
 </body>
 
 </html>
