images, html, css, parallax, scrollReveal

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Mrs+Saint+Delafield" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
 </head>
 
@@ -29,7 +31,7 @@
                 <div class="col s12 m8 offset-m2 ">
                     <div class="card head grey darken-4">
                         <div class="card-content grey-text text-lighten-4">
-                            <span class="card-title section center-align">Hello, I'm Stephanie</span>
+                            <span class="card-title section center-align text-focus-in title">Hello, I'm Stephanie</span>
                             <p class="center-align">I'm a creative Web Developer with a love for intuitive design.</p>
                         </div>
                         <div class="card-action center-align">
@@ -51,7 +53,7 @@
                 this case, is moved at a different speed than the foreground content while scrolling.</p>
             <div class="row">
                 <div class="col m4">
-                    <div class="card medium ">
+                    <div class="card medium portCard">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="assets/images/Crys_1.jpg">
                         </div>
@@ -66,7 +68,7 @@
                     </div>
                 </div>
                 <div class="col m4">
-                    <div class="card medium ">
+                    <div class="card medium portCard">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="assets/images/Crys_1.jpg">
                         </div>
@@ -81,7 +83,7 @@
                     </div>
                 </div>
                 <div class="col m4">
-                    <div class="card medium ">
+                    <div class="card medium portCard">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="assets/images/Crys_1.jpg">
                         </div>
@@ -99,7 +101,7 @@
         </div>
     </div>
     <div class="parallax-container">
-        <div class="parallax"><img src="assets/images/pexels-photo-316465.jpeg"></div>
+        <div class="parallax"><img src="assets/images/pexels-photo-1083822.jpeg"></div>
     </div>
     <div class="section grey darken-4">
         <div class="row container">
@@ -111,7 +113,7 @@
             </div>
             <div class="row">
                 <div class="col m3">
-                    <img class="responsive-img" src="https://via.placeholder.com/250,C/O https://placeholder.com/">
+                    <img class="responsive-img mypic" src="assets/images/IMG_0432_edited.jpg">
                 </div>
                 <div class="col m8">
                     <p class="grey-text text-lighten-4 p1">
