--- a/index.html
+++ b/index.html
@@ -58,11 +58,26 @@
                             <img class="activator" src="assets/images/Crys_1.jpg">
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-                            <p><a href="#">This is a link</a></p>
+                            <span class="card-title activator grey-text text-darken-4">Crystal Collector Game<i class="material-icons right">more_vert</i></span>
+                            <p><a href="https://smanhart.github.io/unit-4-game/" target="_blank">Website</a></p>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                            <span class="card-title grey-text text-darken-4">Crystal Collector Game<i class="material-icons right">close</i></span>
+                            <p>This activity </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col m4">
+                    <div class="card medium portCard">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/images/trainCrop.jpg">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Train Schedule<i class="material-icons right">more_vert</i></span>
+                            <p><a href="https://smanhart.github.io/Train-Schedule/" target="_blank">Website</a></p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Train Schedule<i class="material-icons right">close</i></span>
                             <p>Here is some more information about this product that is only revealed once clicked on.</p>
                         </div>
                     </div>
@@ -70,11 +85,11 @@
                 <div class="col m4">
                     <div class="card medium portCard">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/images/Crys_1.jpg">
+                            <img class="activator" src="assets/images/bananas.png">
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-                            <p><a href="#">This is a link</a></p>
+                            <span class="card-title activator grey-text text-darken-4">Gif Assignment<i class="material-icons right">more_vert</i></span>
+                            <p><a href="https://smanhart.github.io/gif-assignment/" target="_blank">Website</a></p>
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
@@ -82,17 +97,50 @@
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="row">
                 <div class="col m4">
                     <div class="card medium portCard">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/images/Crys_1.jpg">
+                            <img class="activator" src="assets/images/pexels-photo-533360.jpeg">
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-                            <p><a href="#">This is a link</a></p>
+                            <span class="card-title activator grey-text text-darken-4">Conscious Cuisine<i class="material-icons right">more_vert</i></span>
+                            <p><a href="https://smanhart.github.io/Conscious-Cuisine/" target="_blank">Website</a></p>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                            <span class="card-title grey-text text-darken-4">Conscious Cuisine<i class="material-icons right">close</i></span>
+                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col m4">
+                    <div class="card medium portCard">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/images/Fortune Teller.jpg">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Psychic Game<i class="material-icons right">more_vert</i></span>
+                            <p><a href="https://smanhart.github.io/Psychic-Game/" target="_blank">Website</a></p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Psychic Game<i class="material-icons right">close</i></span>
+                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col m4">
+                    <div class="card medium portCard">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/images/Pears.jpg">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Trivia Game<i class="material-icons right">more_vert</i></span>
+                            <p><a href="https://smanhart.github.io/TriviaGame/" target="_blank">Website</a></p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Trivia Game<i class="material-icons right">close</i></span>
                             <p>Here is some more information about this product that is only revealed once clicked on.</p>
                         </div>
                     </div>
