more text, links working

--- a/index.html
+++ b/index.html
@@ -9,21 +9,12 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Mrs+Saint+Delafield" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
 </head>
 
 <body>
-    <!-- <nav>
-        <div class="nav-wrapper grey darken-4">
-            <a href="#" class="brand-logo">Logo</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">JavaScript</a></li>
-            </ul>
-        </div>
-    </nav> -->
     <div class="parallax-container">
         <div class="parallax"><img src="assets/images/pexels-photo-1083822.jpeg"></div>
         <div class="container">
@@ -48,9 +39,7 @@
         <div class="row container">
             <a name="portfolio"></a>
             <h2 class="header red-text text-lighten-4">Portfolio</h2>
-            <p class="grey-text text-lighten-4 lighten-3">Parallax is an effect where the background content or image
-                in
-                this case, is moved at a different speed than the foreground content while scrolling.</p>
+            <p class="grey-text text-lighten-4 lighten-3">Here are the projects I have completed so far.</p>
             <div class="row">
                 <div class="col m4">
                     <div class="card medium portCard">
@@ -63,7 +52,7 @@
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Crystal Collector Game<i class="material-icons right">close</i></span>
-                            <p>This activity </p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -78,7 +67,7 @@
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Train Schedule<i class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -93,7 +82,7 @@
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -111,7 +100,7 @@
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Conscious Cuisine<i class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -126,7 +115,7 @@
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Psychic Game<i class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -141,7 +130,7 @@
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Trivia Game<i class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -161,7 +150,7 @@
             </div>
             <div class="row">
                 <div class="col m3">
-                    <img class="responsive-img mypic" src="assets/images/IMG_0432_edited.jpg">
+                    <img class="responsive-img mypic" src="assets/images/IMG_0424_edited.jpg">
                 </div>
                 <div class="col m8">
                     <p class="grey-text text-lighten-4 p1">
@@ -196,9 +185,7 @@
         <div class="row container">
             <a name="contact"></a>
             <h2 class="header red-text text-lighten-4">Contact</h2>
-            <p class="grey-text text-lighten-4 lighten-3">Parallax is an effect where the background content or image
-                in
-                this case, is moved at a different speed than the foreground content while scrolling.</p>
+            <p class="grey-text text-lighten-4 lighten-3">Drop me a line, I'd love to hear from you. You can also check out my LinkedIn and GitHub pages, or take a peek at my Instagram, where I post about my sewing projects.</p>
             <div class="row">
                 <form class="col s12">
                     <div class="row">
@@ -219,7 +206,12 @@
                             <label for="textarea1">Message</label>
                         </div>
                     </div>
+                    <a class="waves-effect waves-light btn red lighten-4 grey-text text-darken-4"><i class="material-icons right">send</i>Send</a>
                 </form>
+                <div>
+                    <a href="https://www.linkedin.com/in/stephanie-manhart-4681a464" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+                    <a href="https://github.com/smanhart" target="_blank"><i class="fab fa-github-square fa-3x"></i></a>
+                    <a href="https://www.instagram.com/sewingrogue/" target="_blank"><i class="fab fa-instagram fa-3x"></i></div></a>
             </div>
         </div>
     </div>
