added project 2 and a middle parallax

--- a/index.html
+++ b/index.html
@@ -76,63 +76,76 @@
         <div class="row container">
             <a name="Skills"></a>
             <h3 class="header red-text text-lighten-4">Skills and Technologies</h3>
-            <p class="grey-text text-lighten-4 skill">JavaScript | JQuery | MySQL | Sequelize | Node.js | HTML | CSS | Firebase</p>
-            <p class="grey-text text-lighten-4 skill">Handlebars | Express | Passport | BCrypt | Materialize | Bootstrap</p>
+            <p class="grey-text text-lighten-4 skill">JavaScript | JQuery | MySQL | Sequelize | Node.js | HTML | CSS |
+                Firebase</p>
+            <p class="grey-text text-lighten-4 skill">Handlebars | Express | Passport | BCrypt | Materialize |
+                Bootstrap</p>
         </div>
+    </div>
+
+    <div class="parallax-container smallPar">
+        <div class="parallax"><img src="assets/images/pexels-photo-1083822.jpeg"></div>
+    </div>
+
+
+    <div class="section grey darken-4">
         <div class="row container">
             <a name="portfolio"></a>
             <h3 class="header red-text text-lighten-4">Portfolio</h3>
             <!-- <p class="grey-text text-lighten-4 lighten-3">Here are the projects I have completed so far.</p> -->
             <div class="row">
                 <div class="col m4">
-                    <div class="card medium portCard">
+                    <div class="card medium portCard sticky-action">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator previewPic" src="assets/images/Crys_1.jpg">
+                            <img class="activator previewPic" src="assets/images/pexels-photo-305558mobile.jpeg">
+
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Crystal Collector Game<i class="material-icons right">more_vert</i></span>
-                            <p>
-                                <a href="https://smanhart.github.io/unit-4-game/" target="_blank" class="link">Website</a>
-                                <a href="https://github.com/smanhart/unit-4-game" target="_blank" class="link">GitHub</a>
-                            </p>
+                            <span class="card-title activator grey-text text-darken-4">Live Your Green<i class="material-icons right">more_vert</i></span>
+                        </div>
+                        <div class="card-action">
+                            <a href="https://radiant-headland-95505.herokuapp.com/" target="_blank" class="link grey-text text-darken-2">Website</a>
+                            <a href="https://github.com/smanhart/Live-Your-Green" target="_blank" class="link grey-text text-darken-2">GitHub</a>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Crystal Collector Game<i class="material-icons right">close</i></span>
-                            <p>A math game where the HTML is dynamically updated with randomly generated values.
-                                Includes JavaScript, JQuery, CSS, and HTML.</p>
+                            <span class="card-title grey-text text-darken-4">Live Your Green<i class="material-icons right">close</i></span>
+                            <p>A group project using MySQL, Sequelize, Node, Passport, BCrypt, Express, and Handlebars.  </p>
                         </div>
                     </div>
                 </div>
                 <div class="col m4">
-                    <div class="card medium portCard">
+                    <div class="card medium portCard sticky-action">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator previewPic" src="assets/images/trainCrop.jpg">
+                            <img class="activator previewPic" src="assets/images/burger2.jpg">
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Train Schedule<i class="material-icons right">more_vert</i></span>
-                            <p>
-                                <a href="https://smanhart.github.io/Train-Schedule/" target="_blank" class="link">Website</a>
-                                <a href="https://github.com/smanhart/Train-Schedule" target="_blank" class="link">GitHub</a>
-                            </p>
+                            <span class="card-title activator grey-text text-darken-4">Eat Da Burger<i class="material-icons right">more_vert</i></span>
+
+                        </div>
+                        <div class="card-action text-muted">
+                            <a href="https://salty-castle-62283.herokuapp.com/" target="_blank" class="link grey-text text-darken-2">Website</a>
+                            <a href="https://github.com/smanhart/Burger" target="_blank" class="link grey-text text-darken-2">GitHub</a>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Train Schedule<i class="material-icons right">close</i></span>
-                            <p>An application using a Firebase database. Technologies include Javascript, JQuery,
-                                Firebase, Moment.js, CSS, Materialize, and HTML.</p>
+                            <span class="card-title grey-text text-darken-4">Eat Da Burger<i class="material-icons right">close</i></span>
+                            <p>This application showcases MySQL, Node, Express, Handlebars, a custom ORM, and a MVC
+                                file structure.</p>
                         </div>
                     </div>
                 </div>
+
                 <div class="col m4">
-                    <div class="card medium portCard">
+                    <div class="card medium portCard sticky-action">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator previewPic" src="assets/images/bananas.png">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">Gif Assignment<i class="material-icons right">more_vert</i></span>
-                            <p>
-                                <a href="https://smanhart.github.io/gif-assignment/" target="_blank" class="link">Website</a>
-                                <a href="https://github.com/smanhart/gif-assignment" target="_blank" class="link">GitHub</a>
-                            </p>
+
+                        </div>
+                        <div class="card-action text-muted">
+                            <a href="https://smanhart.github.io/gif-assignment/" target="_blank" class="link grey-text text-darken-2">Website</a>
+                            <a href="https://github.com/smanhart/gif-assignment" target="_blank" class="link grey-text text-darken-2">GitHub</a>
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Gif Assignment<i class="material-icons right">close</i></span>
@@ -145,53 +158,55 @@
 
             <div class="row">
                 <div class="col m4">
-                    <div class="card medium portCard">
+                    <div class="card medium portCard sticky-action">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator previewPic" src="assets/images/pexels-photo-533360.jpeg">
+                            <img class="activator previewPic" src="assets/images/Crys_1.jpg">
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Conscious Cuisine<i class="material-icons right">more_vert</i></span>
-                            <p>
-                                <a href="https://smanhart.github.io/Conscious-Cuisine/" target="_blank" class="link">Website</a>
-                                <a href="https://github.com/smanhart/Conscious-Cuisine" target="_blank" class="link">GitHub</a>
-                            </p>
+                            <span class="card-title activator grey-text text-darken-4">Crystal Collector<i class="material-icons right">more_vert</i></span>
+                        </div>
+                        <div class="card-action text-muted ">
+                            <a href="https://smanhart.github.io/unit-4-game/" target="_blank" class="link grey-text text-darken-2">Website</a>
+                            <a href="https://github.com/smanhart/unit-4-game" target="_blank" class="link grey-text text-darken-2">GitHub</a>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Conscious Cuisine<i class="material-icons right">close</i></span>
-                            <p>A group project to learn to work with API's. Joined two API's together and worked with
-                                the JSON object that was returned. Also used JavaScript, JQuery, Sass, and HTML.</p>
+                            <span class="card-title grey-text text-darken-4">Crystal Collector Game<i class="material-icons right">close</i></span>
+                            <p>A math game where the HTML is dynamically updated with randomly generated values.
+                                Includes JavaScript, JQuery, CSS, and HTML.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col m4">
-                    <div class="card medium portCard">
+                    <div class="card medium portCard sticky-action">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator previewPic" src="assets/images/burger2.jpg">
+                            <img class="activator previewPic" src="assets/images/trainCrop.jpg">
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Eat Da Burger<i class="material-icons right">more_vert</i></span>
-                            <p>
-                                <a href="https://salty-castle-62283.herokuapp.com/" target="_blank" class="link">Website</a>
-                                <a href="https://github.com/smanhart/Burger" target="_blank" class="link">GitHub</a>
-                            </p>
+                            <span class="card-title activator grey-text text-darken-4">Train Schedule<i class="material-icons right">more_vert</i></span>
+                        </div>
+                        <div class="card-action text-muted">
+                            <a href="https://smanhart.github.io/Train-Schedule/" target="_blank" class="link grey-text text-darken-2">Website</a>
+                            <a href="https://github.com/smanhart/Train-Schedule" target="_blank" class="link grey-text text-darken-2">GitHub</a>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Eat Da Burger<i class="material-icons right">close</i></span>
-                            <p>This application showcases MySQL, Node, Express, Handlebars, a custom ORM, and a MVC file structure.</p>
+                            <span class="card-title grey-text text-darken-4">Train Schedule<i class="material-icons right">close</i></span>
+                            <p>An application using a Firebase database. Technologies include Javascript, JQuery,
+                                Firebase, Moment.js, CSS, Materialize, and HTML.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col m4">
-                    <div class="card medium portCard">
+                    <div class="card medium portCard sticky-action">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator previewPic" src="assets/images/FriendFinder_edited.jpg">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">Friend Finder<i class="material-icons right">more_vert</i></span>
-                            <p>
-                                <a href="https://infinite-retreat-27200.herokuapp.com/" target="_blank" class="link">Website</a>
-                                <a href="https://github.com/smanhart/Friend-Finder" target="_blank" class="link">GitHub</a>
-                            </p>
+
+                        </div>
+                        <div class="card-action text-muted">
+                            <a href="https://infinite-retreat-27200.herokuapp.com/" target="_blank" class="link grey-text text-darken-2">Website</a>
+                            <a href="https://github.com/smanhart/Friend-Finder" target="_blank" class="link grey-text text-darken-2">GitHub</a>
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Friend Finder<i class="material-icons right">close</i></span>
@@ -215,7 +230,7 @@
             </div>
         </div>
     </div>
-    <div class="parallax-container">
+    <div class="parallax-container smallPar">
         <div class="parallax"><img src="assets/images/pexels-photo-1083822.jpeg"></div>
     </div>
 
